Updates from Overleaf

--- a/head/settings_epfl_template.tex
+++ b/head/settings_epfl_template.tex
@@ -34,6 +34,9 @@
 \usepackage[french,german,english]{babel}
 
 
+
+\DeclareUnicodeCharacter{2606}{\ding{73}} % '☆' WHITE STAR (U+2606)
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% EDOC THESIS TEMPLATE: Variant 1.0 -> Latin modern, large text width&height
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -196,3 +199,4 @@
   \ht\Mathstrutbox@1.2\ht\z@ \dp\Mathstrutbox@1.2\dp\z@
 }
 \makeatother
+
