--- a/head/titlepage.tex
+++ b/head/titlepage.tex
@@ -6,7 +6,7 @@
 
 
 \null\vspace{2cm}
-{\huge FIRST LINE OF TITLE \\[12pt] SECOND LINE OF TITLE} \\[24pt] 
+{\huge Dynamics of Brain Function \\[12pt] In Preterm-Born Young Adolescents} \\[24pt] 
 \textcolor{gray}{\small{THIS IS A TEMPORARY TITLE PAGE \\ It will be replaced for the final print by a version \\ provided by the registrar's office.}}
     
 \vfill
@@ -17,24 +17,25 @@
 \parbox{0.7\textwidth}{%
 	Thèse n. 1234 \the\year\\
 	présentée le \today\\
-	à la Faculté des sciences de base\\
-	laboratoire SuperScience\\
-	programme doctoral en SuperScience\\
+	à la Faculté des Sciences et Techniques d'Ingénieur (STI),\\
+	Medical Image Processing Laboratory (MIP:Lab),\\
+	Programme Doctoral en Génie Electrique,\\
 %
 %	ÉCOLE POLYTECHNIQUE FÉDÉRALE DE LAUSANNE\\
-	École polytechnique fédérale de Lausanne\\[6pt]
+	École Polytechnique Fédérale de Lausanne\\[6pt]
 	pour l'obtention du grade de Docteur ès Sciences\\
-	par\\ [4pt]
-	\null \hspace{3em} Paolino Paperino\\[9pt]
+	par\\ [5pt]
+	\null \hspace{0.5em} Lorena GONÇALVES DE ALCÂNTARA E FREITAS KRIKLER\\[10pt]
 %
 \small
 acceptée sur proposition du jury:\\[4pt]
 %
-    Prof Name Surname, président du jury\\
-    Prof Name Surname, directeur de thèse\\
-    Prof Name Surname, rapporteur\\
-    Prof Name Surname, rapporteur\\
-    Prof Name Surname, rapporteur\\[12pt]
+    Prof. Jean-Philippe THIRAN, président du jury\\
+    Prof. Dimitri VAN DE VILLE, directeur de thèse\\
+    Prof. Petra Susan HÜPPI, co-directrice de thèse\\
+    Dr. Enzo TAGLIAZUCCHI, rapporteur\\
+    Prof. François LAZEYRAS, rapporteur\\
+    Prof. Silvestro MICERA, rapporteur\\[12pt]
 %
 Lausanne, EPFL, \the\year}
 \end{tabular}
