--- a/tail/biblio.tex
+++ b/tail/biblio.tex
@@ -3,4 +3,4 @@
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{apalike}
 \bibliography{tail/bibliography}
-\addcontentsline{toc}{chapter}{Bibliography}
+%\addcontentsline{toc}{chapter}{Bibliography}
