--- a/head/abstracts.tex
+++ b/head/abstracts.tex
@@ -6,21 +6,10 @@
 \cleardoublepage
 \chapter*{Abstract}
 \markboth{Abstract}{Abstract}
-\addcontentsline{toc}{chapter}{Abstract (English/Français/Deutsch)} % adds an entry to the table of contents
+\addcontentsline{toc}{chapter}{Abstract (English/Français)} % adds an entry to the table of contents
 % put your text here
-\lipsum[1-2]
+\add{Add abstract}
 
-
-
-
-% German abstract
-\begin{otherlanguage}{german}
-\cleardoublepage
-\chapter*{Zusammenfassung}
-\markboth{Zusammenfassung}{Zusammenfassung}
-% put your text here
-\lipsum[1-2]
-\end{otherlanguage}
 
 
 
@@ -31,7 +20,7 @@
 \chapter*{Résumé}
 \markboth{Résumé}{Résumé}
 % put your text here
-\lipsum[1-2]
+\add{French translation of abstract}
 \end{otherlanguage}
 
 
